--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,9 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
+    <meta name="author" content="freecity.club">
+    <meta name="description" content="freecity.club是一个个人技术博客, 包含各类技术文章, 并提供了各种在线工具...">
+    <meta name="keywords" content="freecity, freecity.club, www.freecity.club, 个人博客, 技术博客, 在线工具, 归园田居">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <title>归园田居</title>
   </head>
